--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
         maximum-scale=1,minimum-scale=1,user-scalable=no,
         viewport-fit=cover">
     <title>我的简历</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -17,66 +18,6 @@
     <div id="div1Wrpper">
         <div id="div1"></div>
     </div>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        * {
-            box-sizing: border-box;
-        }
-
-        ::before {
-            box-sizing: border-box;
-        }
-
-        ::after {
-            box-sizing: border-box;
-        }
-
-        #demo {
-            word-break: break-all;
-        }
-
-        #div1 {
-            position: fixed;
-            left: 50%;
-            transform: translateX(-50%);
-            top: 20px;
-        }
-
-        #div1::before {
-            content: '';
-            display: block;
-            position: absolute;
-        }
-
-        #div1::after {
-            content: '';
-            display: block;
-            position: absolute;
-        }
-
-        /* 媒体查询 */
-        @media (max-width:500px) {
-            #html {
-                height: 50vh;
-                overflow: auto;
-            }
-
-            #div1Wrapper {
-                height: 50vh;
-
-            }
-
-            #div1 {
-                position: relative;
-                top: 0;
-                right: 0;
-            }
-        }
-    </style>
 </body>
 
 </html>
